--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,9 @@ htmlcov
 .coverage
 .coveralls.yml
 
+# PyCharm
+.idea/
+
 # Database
 sandbox/db.sqlite
 
@@ -23,3 +26,4 @@ integration.py
 
 # Sandbox
 sandbox/public/media
+
